; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_mach.c_mac_task_check_expose_task.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_mach.c_mac_task_check_expose_task.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.task = type { i32 }
%struct.proc = type { i32 }
%struct.ucred = type { i32 }

@ESRCH = common dso_local global i32 0, align 4
@proc_check_expose_task = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mac_task_check_expose_task(%struct.task* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.task*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.proc*, align 8
  %6 = alloca %struct.ucred*, align 8
  store %struct.task* %0, %struct.task** %3, align 8
  %7 = load %struct.task*, %struct.task** %3, align 8
  %8 = call %struct.proc* @mac_task_get_proc(%struct.task* %7)
  store %struct.proc* %8, %struct.proc** %5, align 8
  %9 = load %struct.proc*, %struct.proc** %5, align 8
  %10 = icmp eq %struct.proc* %9, null
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i32, i32* @ESRCH, align 4
  store i32 %12, i32* %2, align 4
  br label %22

13:                                               ; preds = %1
  %14 = call %struct.ucred* (...) @kauth_cred_get()
  store %struct.ucred* %14, %struct.ucred** %6, align 8
  %15 = load i32, i32* @proc_check_expose_task, align 4
  %16 = load %struct.ucred*, %struct.ucred** %6, align 8
  %17 = load %struct.proc*, %struct.proc** %5, align 8
  %18 = call i32 @MAC_CHECK(i32 %15, %struct.ucred* %16, %struct.proc* %17)
  %19 = load %struct.proc*, %struct.proc** %5, align 8
  %20 = call i32 @proc_rele(%struct.proc* %19)
  %21 = load i32, i32* %4, align 4
  store i32 %21, i32* %2, align 4
  br label %22

22:                                               ; preds = %13, %11
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local %struct.proc* @mac_task_get_proc(%struct.task*) #1

declare dso_local %struct.ucred* @kauth_cred_get(...) #1

declare dso_local i32 @MAC_CHECK(i32, %struct.ucred*, %struct.proc*) #1

declare dso_local i32 @proc_rele(%struct.proc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
